--- a/company/templates/company/company_delete_form.html
+++ b/company/templates/company/company_delete_form.html
@@ -9,7 +9,7 @@
   <div class="modal-body">
     {% csrf_token %}
     <p>
-      Are you sure you want to delete <i class="text-danger fw-bold">{{ company.name }}</i>?
+      Delete <i class="text-danger fw-bold">{{ company.name }}</i>?
     </p>
     <input type="hidden" name="company_id" value="{{ company.pk }}">
   </div>
