--- a/delivery/templates/delivery/delivery_detail.html
+++ b/delivery/templates/delivery/delivery_detail.html
@@ -4,8 +4,20 @@
 {% endblock title %}
 {% block content %}
   <div class="container">
-    Delivery Detail
-    <h4>{{ delivery.name }}</h4>
-    {{ delivery.description }}
+    <div class="panel">
+      <div class="panel-heading d-flex justify-content-between me-2">
+        <span class="h4">Delivery</span>
+        <span>Received by {{ delivery.received_by.first_name }} at  {{ delivery.delivery_date|date:"h:i" }} on {{ delivery.delivery_date|date:"d/m/Y" }}</span>
+        <span>
+          <a href="{% url 'delivery_update' pk=delivery.pk %}"
+             class="btn btn-success">
+            <i class="bi bi-pencil-square"></i> Edit
+          </a>
+        </span>
+      </div>
+      <div class="panel-content">
+        {% for stock in delivery.stockitems.all %}<p>{{ stock }}</p>{% endfor %}
+      </div>
+    </div>
   </div>
 {% endblock content %}
