--- a/location/templates/location/location_delete_form.html
+++ b/location/templates/location/location_delete_form.html
@@ -9,7 +9,7 @@
   <div class="modal-body">
     {% csrf_token %}
     <p>
-      Are you sure you want to delete <i class="text-danger fw-bold">{{ location.name }}</i>?
+      Delete <i class="text-danger fw-bold">{{ location.name }}</i>?
     </p>
     <input type="hidden" name="location_id" value="{{ location.pk }}">
   </div>
