--- a/item/templates/item/stockitem_update.html
+++ b/item/templates/item/stockitem_update.html
@@ -1,10 +1,9 @@
 {% extends "object_update_base.html" %}
 {% load crispy_forms_tags %}
 {% block title %}
-  Item
-{% endblock title %}
+  Stock Item {% endblock title %}
 {% block panel_title %}
-  Item Update
+  Stock Item Update
 {% endblock panel_title %}
 {% block update_form %}
   {{ form|crispy }}
