--- a/category/templates/category/category_update.html
+++ b/category/templates/category/category_update.html
@@ -5,11 +5,18 @@
 {% endblock title %}
 {% block content %}
   <div class="container">
-    Category Update
-    <form method="post">
-      {% csrf_token %}
-      {{ form|crispy }}
-      <button type="submit">Update</button>
-    </form>
+    <div class="panel">
+      <div class="panel-heading">
+        <h3 class="panel-title">Category Update</h3>
+      </div>
+      <div class="panel-content">
+        <form method="post">
+          {% csrf_token %}
+          {{ form|crispy }}
+          <button class="btn btn-success" type="submit">Update</button>
+        </form>
+      </div>
+    </div>
+
   </div>
 {% endblock content %}
