--- a/delivery/templates/delivery/delivery_delete_form.html
+++ b/delivery/templates/delivery/delivery_delete_form.html
@@ -12,7 +12,7 @@
       Delete this delivery? <small class="text-muted">(received {{ delivery.delivery_date|date:"d/m/y h:i" }} by {{ delivery.received_by.first_name }})</small>
     </p>
     <p>
-      <i class="text-danger fw-bold">All associated stock items will be delete!</i>
+      <i class="text-danger">All associated stock items will be deleted!</i>
     </p>
     <input type="hidden" name="delivery_id" value="{{ delivery.pk }}">
   </div>
