--- a/category/templates/category/category_list.html
+++ b/category/templates/category/category_list.html
@@ -7,42 +7,41 @@
     <div class="panel">
       <div class="panel-heading d-flex justify-content-between me-2">
         <span class="h4">Categories</span>
-        <span><a href="{% url 'category_create' %}" class="btn btn-success"><i class="bi bi-plus-circle"></i> New category</a></span>
+        <span><a href="{% url 'category_create' %}" class="btn btn-sm btn-success"><i class="bi bi-plus-circle"></i> New category</a></span>
       </div>
       <div class="panel-content">
-        <div class="row my-2 px-2">
-          <div class="border-bottom col col-lg-2">
-            <b>Categories</b>
-          </div>
-          <div class="border-bottom col col-lg-3">
-            <b>Description</b>
-          </div>
-          <div class="border-bottom col col-lg-6">
-            <b>Items</b>
-          </div>
-          <div class="border-bottom col col-lg-1 d-none d-lg-block">
-            <b>Actions</b>
-          </div>
+        <div class="table-responsive">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Categories</th>
+                <th scope="col">Description</th>
+                <th scope="col">Items</th>
+                <th scope="col" class="d-none d-lg-table-cell">Actions</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for category in categories %}
+                <tr>
+                  <td>{{ category.name }}</td>
+                  <td>{{ category.description }}</td>
+                  <td>{{ category.items.all }}</td>
+                  <td class="d-none d-lg-table-cell">
+                    <a href="{% url 'category_update' pk=category.pk %}"><i class="bi bi-pencil-square"></i></a>
+                    <a hx-get="{% url 'category_delete' category.pk %}"
+                       hx-trigger="click"
+                       hx-target="#deleteModal .modal-content"
+                       hx-swap="innerHTML"
+                       data-bs-toggle="modal"
+                       data-bs-target="#deleteModal"
+                       href="javascript:void(0);"><i class="bi bi-trash"></i></a>
+                  </td>
+                </tr>
+              {% endfor %}
+            </tbody>
+          </table>
         </div>
-        {% for category in categories %}
-          <div class="row my-2 px-2">
-            <div class="border-bottom col col-lg-2">{{ category.name }}</div>
-            <div class="border-bottom col col-lg-3">{{ category.description }}</div>
-            <div class="border-bottom col col-lg-6">{{ category.items.all }}</div>
-            <div class="border-bottom col col-lg-1 d-none d-lg-block">
-              <span class="px-2"><a href="{% url 'category_update' pk=category.pk %}"><i class="bi bi-pencil-square"></i></a></span>
-              <span class="px-2">
-                <a hx-get="{% url 'category_delete' category.pk %}"
-                   hx-trigger="click"
-                   hx-target="#deleteModal .modal-content"
-                   hx-swap="innerHTML"
-                   data-bs-toggle="modal"
-                   data-bs-target="#deleteModal"
-                   href="javascript:void(0);"><i class="bi bi-trash"></i></a>
-              </span>
-            </div>
-          </div>
-        {% endfor %}
+        {% include "pagination_simple.html" %}
       </div>
     </div>
   </div>
