--- a/company/templates/company/company_list.html
+++ b/company/templates/company/company_list.html
@@ -6,56 +6,51 @@
   <div class="container-fluid">
     <div class="panel">
       <div class="panel-heading d-flex justify-content-between me-2">
-        <span class="h4">Company List</span>
-        <span><a href="{% url 'company_create' %}" class="btn btn-success"><i class="bi bi-plus-circle"></i> New company</a></span>
+        <span class="h4">Companies</span>
+        <span><a href="{% url 'company_create' %}" class="btn btn-sm btn-success"><i class="bi bi-plus-circle"></i> New company</a></span>
       </div>
       <div class="panel-content">
-        <div class="row my-2 px-2">
-          <div class="border-bottom col col-lg-2">
-            <b>Company Name</b>
-          </div>
-          <div class="border-bottom col col-lg-2">
-            <b>Description</b>
-          </div>
-          <div class="border-bottom col col-lg-3">
-            <b>Manufactured Items</b>
-          </div>
-          <div class="border-bottom col col-lg-4">
-            <b>Supplied Items</b>
-          </div>
-          <div class="border-bottom col col-lg-1 d-none d-lg-block">
-            <b>Actions</b>
-          </div>
+        <div class="table-responsive pt-3">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Company</th>
+                <th scope="col" class="d-none d-lg-table-cell">Description</th>
+                <th scope="col" class="text-center d-lg-table-cell">Made</th>
+                <th scope="col" class="text-center d-lg-table-cell">Supplied</th>
+                <th scope="col">Website</th>
+                <th scope="col" class="d-none d-lg-table-cell">Actions</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for company in companies %}
+                <tr>
+                  <td>
+                    <a href="{% url 'company_detail' company.pk %}">{{ company.name }}</a>
+                  </td>
+                  <td class="d-none d-lg-table-cell">{{ company.description }}</td>
+                  <td class="text-center d-lg-table-cell">{{ company.manufactured_items.count }}</td>
+                  <td class="text-center d-lg-table-cell">{{ company.supplied_items.count }}</td>
+                  <td>
+                    <a href="{{ company.website }}" title="Visit {{ company.website }}">{{ company.website }}</a>
+                  </td>
+                  <td class="d-none d-lg-table-cell">
+                    <a href="{% url 'company_update' company.pk %}"><i class="bi bi-pencil-square"></i></a>
+                    <a hx-get="{% url 'company_delete' company.pk %}"
+                       hx-trigger="click"
+                       hx-target="#deleteModal .modal-content"
+                       hx-swap="innerHTML"
+                       data-bs-toggle="modal"
+                       data-bs-target="#deleteModal"
+                       href="javascript:void(0);"><i class="bi bi-trash"></i></a>
+                  </td>
+                </tr>
+              {% endfor %}
+            </tbody>
+          </table>
         </div>
-        {% for company in companies %}
-          <div class="row my-2 px-2">
-            <div class="border-bottom col col-lg-2">{{ company.name }}</div>
-            <div class="border-bottom col col-lg-2">{{ company.description }}</div>
-            <div class="border-bottom col col-lg-3">
-              {% for items in company.supplied_items.all %}
-                <span class="px-2 bg-light"><a href="{% url 'item_detail' items.pk %}">{{ items.name }}</a></span>
-              {% endfor %}
-            </div>
-            <div class="border-bottom col col-lg-4">
-              {% for items in company.manufactured_items.all %}
-                <span class="px-2 bg-light"><a href="{% url 'item_detail' items.pk %}">{{ items.name }}</a></span>
-              {% endfor %}
-            </div>
-            <div class="border-bottom col col-lg-1 d-none d-lg-block">
-              <span class="px-2"><a href="{% url 'company_update' company.pk %}"><i class="bi bi-pencil-square"></i></a></span>
-              <span class="px-2">
-                <a hx-get="{% url 'company_delete' company.pk %}"
-                   hx-trigger="click"
-                   hx-target="#deleteModal .modal-content"
-                   hx-swap="innerHTML"
-                   data-bs-toggle="modal"
-                   data-bs-target="#deleteModal"
-                   href="javascript:void(0);"><i class="bi bi-trash"></i></a>
-              </span>
-            </div>
-          </div>
-        {% endfor %}
       </div>
+      {% include "pagination_simple.html" %}
     </div>
   </div>
   <!-- Delete Modal -->
