--- a/item/templates/item/item_list.html
+++ b/item/templates/item/item_list.html
@@ -7,65 +7,60 @@
     <div class="panel">
       <div class="panel-heading d-flex justify-content-between me-2">
         <span class="h4">Items</span>
-        <span><a href="{% url 'item_create' %}" class="btn btn-success"><i class="bi bi-plus-circle"></i> New item</a></span>
+        <span><a href="{% url 'item_create' %}" class="btn btn-sm btn-success"><i class="bi bi-plus-circle"></i> New item</a></span>
       </div>
       <div class="panel-content">
-        <div class="row my-2 px-2">
-          <div class="border-bottom col col-lg-3">
-            <b>Name</b>
-          </div>
-          <div class="border-bottom col col-lg-1">
-            <b>Product ID</b>
-          </div>
-          <div class="border-bottom col col-lg-1">
-            <b>Category</b>
-          </div>
-          <div class="border-bottom col col-lg-1">
-            <b>Manufacturer</b>
-          </div>
-          <div class="border-bottom col col-lg-1">
-            <b>Supplier</b>
-          </div>
-          <div class="border-bottom col col-lg-4">
-            <b>Description</b>
-          </div>
-          <div class="border-bottom col col-lg-1 d-none d-lg-block">
-            <b>Actions</b>
-          </div>
+        <div class="table-responsive pt-3">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Name</th>
+                <th scope="col">Product ID</th>
+                <th scope="col">Category</th>
+                <th scope="col">Manufacturer</th>
+                <th scope="col">Supplier</th>
+                <th scope="col">Description</th>
+                <th scope="col" class="d-none d-lg-table-cell">Actions</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for item in items %}
+                <tr>
+                  <td>
+                    <a href="{% url 'item_detail' item.pk %}" title="item details">{{ item.name }}</a>
+                  </td>
+                  <td>{{ item.product_id }}</td>
+                  <td>
+                    <a href="{% url 'category_detail' item.category.pk %}"
+                       title="item details">{{ item.category }}</a>
+                  </td>
+                  <td>
+                    {% if item.manufacturer %}
+                      <a href="{% url 'company_detail' item.manufacturer.pk %}">{{ item.manufacturer }}</a>
+                    {% endif %}
+                  </td>
+                  <td>
+                    {% if item.supplier %}
+                      <a href="{% url 'company_detail' item.supplier.pk %}">{{ item.supplier }}</a>
+                    {% endif %}
+                  </td>
+                  <td>{{ item.description }}</td>
+                  <td class="d-none d-lg-table-cell">
+                    <a href="{% url 'item_update' item.pk %}"><i class="bi bi-pencil-square"></i></a>
+                    <a hx-get="{% url 'item_delete' item.pk %}"
+                       hx-trigger="click"
+                       hx-target="#deleteModal .modal-content"
+                       hx-swap="innerHTML"
+                       data-bs-toggle="modal"
+                       data-bs-target="#deleteModal"
+                       href="javascript:void(0);"><i class="bi bi-trash"></i></a>
+                  </td>
+                </tr>
+              {% endfor %}
+            </tbody>
+          </table>
         </div>
-        {% for item in items %}
-          <div class="row my-2 px-2">
-            <div class="border-bottom col col-lg-3">
-              <a href="{% url 'item_detail' item.pk %}" title="item details">{{ item.name }}</a>
-            </div>
-            <div class="border-bottom col col-lg-1">{{ item.product_id }}</div>
-            <div class="border-bottom col col-lg-1">
-              <a href="{% url 'category_detail' item.category.pk %}"
-                 title="item details">{{ item.category }}</a>
-            </div>
-            <div class="border-bottom col col-lg-1">
-              <a href="{% url 'company_detail' pk=item.manufacturer.pk %}">{{ item.manufacturer }}</a>
-            </div>
-            <div class="border-bottom col col-lg-1">
-              <a href="{% url 'company_detail' pk=item.supplier.pk %}">{{ item.supplier }}</a>
-            </div>
-            <div class="border-bottom col col-lg-4">{{ item.description }}</div>
-            <div class="border-bottom col col-lg-1 d-none d-lg-block">
-              <span class="px-2">
-                <a href="{% url 'item_update' item.pk %}"><i class="bi bi-pencil-square"></i></a>
-              </span>
-              <span class="px-2">
-                <a hx-get="{% url 'item_delete' item.pk %}"
-                   hx-trigger="click"
-                   hx-target="#deleteModal .modal-content"
-                   hx-swap="innerHTML"
-                   data-bs-toggle="modal"
-                   data-bs-target="#deleteModal"
-                   href="javascript:void(0);"><i class="bi bi-trash"></i></a>
-              </span>
-            </div>
-          </div>
-        {% endfor %}
+        {% include "pagination_simple.html" %}
       </div>
     </div>
   </div>
