--- a/item/templates/item/stockitem_list.html
+++ b/item/templates/item/stockitem_list.html
@@ -8,73 +8,62 @@
     <div class="panel">
       <div class="panel-heading d-flex justify-content-between me-2">
         <span class="h4">Stock Items</span>
-        <span><a href="{% url 'stock_create' %}" class="btn btn-success"><i class="bi bi-plus-circle"></i> New stock</a></span>
+        <span><a href="{% url 'stock_create' %}" class="btn btn-sm btn-success"><i class="bi bi-plus-circle"></i> New stock</a></span>
       </div>
       <div class="panel-content">
-        <div class="row my-2 px-2">
-          <div class="border-bottom col col-lg-3">
-            <b>Item</b>
-          </div>
-          <div class="border-bottom col col-lg-1">
-            <b>Box ID</b>
-          </div>
-          <div class="border-bottom col col-lg-1">
-            <b>Level</b>
-          </div>
-          <div class="border-bottom col col-lg-1">
-            <b>Lot Number</b>
-          </div>
-          <div class="border-bottom col col-lg-1">
-            <b>Expiry Date</b>
-          </div>
-          <div class="border-bottom col col-lg-1">
-            <b>Delivery</b>
-          </div>
-          <div class="border-bottom col col-lg-2">
-            <b>Location</b>
-          </div>
-          <div class="border-bottom col col-lg-1 d-none d-lg-block">
-            <b>Actions</b>
-          </div>
+        <div class="table-responsive">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Item</th>
+                <th scope="col">Box ID</th>
+                <th scope="col">Level</th>
+                <th scope="col">Lot Number</th>
+                <th scope="col">Expiry Date</th>
+                <th scope="col" class="d-none d-lg-table-cell">Delivery</th>
+                <th scope="col">Location</th>
+                <th scope="col" class="d-none d-lg-table-cell">Actions</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for stock in stockitems %}
+                <tr>
+                  <td>
+                    <a href="{% url 'item_detail' stock.item.pk %}">{{ stock.item.name }}</a>
+                  </td>
+                  <td>
+                    <a href="{% url 'stock_detail' pk=stock.pk %}"
+                       title="#{{ stock.ordinal_number }} Received at {{ stock.delivery.delivery_date|date:'d/m/y h:i' }}">
+                      <span class="badge rounded-pill bg-info"><b>{{ stock.ordinal_number }}</b></span>
+                    </a>
+                  </td>
+                  <td>stock level</td>
+                  <td>{{ stock.lot_number }}</td>
+                  <td>{{ stock.expiry_date|date:'d/m/Y' }}</td>
+                  <td class="d-none d-lg-table-cell">
+                    <a href="{% url 'delivery_detail' pk=stock.delivery.pk %}">{{ stock.delivery.delivery_date|date:'d/m/Y' }}</a>
+                    {% delivery_condicon stock.delivery_condition %}
+                  </td>
+                  <td>
+                    <a href="{% url 'location_detail' pk=stock.location.pk %}"
+                       title="Location detail">{{ stock.location.name }}</a>
+                  </td>
+                  <td class="d-none d-lg-table-cell">
+                    <a href="{% url 'stock_update' stock.pk %}"><i class="bi bi-pencil-square"></i></a>
+                    <a hx-get="{% url 'stock_delete' stock.pk %}"
+                       hx-trigger="click"
+                       hx-target="#deleteModal .modal-content"
+                       hx-swap="innerHTML"
+                       data-bs-toggle="modal"
+                       data-bs-target="#deleteModal"
+                       href="javascript:void(0);"><i class="bi bi-trash"></i></a>
+                  </td>
+                </tr>
+              {% endfor %}
+            </tbody>
+          </table>
         </div>
-        {% for stock in stockitems %}
-          <div class="row my-2 px-2">
-            <div class="border-bottom col col-lg-3">
-              <a href="{% url 'item_detail' stock.item.pk %}">{{ stock.item.name }}</a>
-            </div>
-            <div class="border-bottom col col-lg-1">
-              <a href="{% url 'stock_detail' pk=stock.pk %}"
-                 title="#{{ stock.ordinal_number }} Received at {{ stock.delivery.delivery_date|date:'d/m/y h:i' }}">
-                <span class="badge rounded-pill bg-info"><b>{{ stock.ordinal_number }}</b></span>
-              </a>
-            </div>
-            <div class="border-bottom col col-lg-1">stock level</div>
-            <div class="border-bottom col col-lg-1">{{ stock.lot_number }}</div>
-            <div class="border-bottom col col-lg-1">{{ stock.expiry_date|date:'d/m/Y' }}</div>
-            <div class="border-bottom col col-lg-1 d-none d-lg-block">
-              <a href="{% url 'delivery_detail' pk=stock.delivery.pk %}">{{ stock.delivery.delivery_date|date:'d/m/Y' }}</a>
-              {% delivery_condicon stock.delivery_condition %}
-            </div>
-            <div class="border-bottom col col-lg-2">
-              <a href="{% url 'location_detail' pk=stock.location.pk %}"
-                 title="Location detail">{{ stock.location.name }}</a>
-            </div>
-            <div class="border-bottom col col-lg-1">
-              <span class="px-2">
-                <a href="{% url 'stock_update' stock.pk %}"><i class="bi bi-pencil-square"></i></a>
-              </span>
-              <span class="px-2">
-                <a hx-get="{% url 'stock_delete' stock.pk %}"
-                   hx-trigger="click"
-                   hx-target="#deleteModal .modal-content"
-                   hx-swap="innerHTML"
-                   data-bs-toggle="modal"
-                   data-bs-target="#deleteModal"
-                   href="javascript:void(0);"><i class="bi bi-trash"></i></a>
-              </span>
-            </div>
-          </div>
-        {% endfor %}
+        {% include "pagination_simple.html" %}
       </div>
     </div>
   </div>
