--- a/location/templates/location/location_detail.html
+++ b/location/templates/location/location_detail.html
@@ -1,11 +1,10 @@
-{% extends "base.html" %}
+{% extends "object_detail_base.html" %}
 {% block title %}
   Location
 {% endblock title %}
-{% block content %}
-  <div class="container">
-    Location Detail
-    <h4>{{ location.name }}</h4>
-    {{ location.description }}
-  </div>
-{% endblock content %}
+{% block panel_title %}
+  Location Detail
+{% endblock panel_title %}
+{% block panel_content %}
+  {{ location.name }}
+{% endblock panel_content %}
