--- a/location/templates/location/location_list.html
+++ b/location/templates/location/location_list.html
@@ -7,36 +7,43 @@
     <div class="panel">
       <div class="panel-heading d-flex justify-content-between me-2">
         <span class="h4">Locations</span>
-        <span><a href="{% url 'location_create' %}" class="btn btn-success"><i class="bi bi-plus-circle"></i> New location</a></span>
+        <span><a href="{% url 'location_create' %}" class="btn btn-sm btn-success"><i class="bi bi-plus-circle"></i> New location</a></span>
       </div>
       <div class="panel-content">
-        <div class="row my-2 px-2">
-          <div class="border-bottom col col-lg-3"><b>Location Name</b></div>
-          <div class="border-bottom col col-lg-3"><b>Description</b></div>
-          <div class="border-bottom col col-lg-5"><b>Stock Items</b></div>
-          <div class="border-bottom col col-lg-1 d-none d-lg-block"><b>Actions</b></div>
+        <div class="table-responsive">
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Location Name</th>
+                <th scope="col">Description</th>
+                <th scope="col">Stock Items</th>
+                <th scope="col" class="d-none d-lg-table-cell">Actions</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for location in locations %}
+                <tr>
+                  <td>
+                    <a href="{% url 'location_detail' location.pk %}">{{ location.name }}</a>
+                  </td>
+                  <td>{{ location.description }}</td>
+                  <td>{{ location.stockitems.all }}</td>
+                  <td class="d-none d-lg-table-cell">
+                    <a href="{% url 'location_update' location.pk %}"><i class="bi bi-pencil-square"></i></a>
+                    <a hx-get="{% url 'location_delete' location.pk %}"
+                       hx-trigger="click"
+                       hx-target="#deleteModal .modal-content"
+                       hx-swap="innerHTML"
+                       data-bs-toggle="modal"
+                       data-bs-target="#deleteModal"
+                       href="javascript:void(0);"><i class="bi bi-trash"></i></a>
+                  </td>
+                </tr>
+              {% endfor %}
+            </tbody>
+          </table>
         </div>
-        {% for location in locations %}
-          <div class="row my-2 px-2">
-            <div class="border-bottom col col-lg-3">{{ location.name }}</div>
-            <div class="border-bottom col col-lg-3">{{ location.description }}</div>
-            <div class="border-bottom col col-lg-5">{{ location.stockitems.all }}</div>
-            <div class="border-bottom col col-lg-1 d-none d-lg-block">
-              <span class="px-2">
-                <a href="{% url 'location_update' location.pk %}"><i class="bi bi-pencil-square"></i></a>
-              </span>
-              <span class="px-2">
-                <a hx-get="{% url 'location_delete' location.pk %}"
-                   hx-trigger="click"
-                   hx-target="#deleteModal .modal-content"
-                   hx-swap="innerHTML"
-                   data-bs-toggle="modal"
-                   data-bs-target="#deleteModal"
-                   href="javascript:void(0);"><i class="bi bi-trash"></i></a>
-              </span>
-            </div>
-          </div>
-        {% endfor %}
+        {% include "pagination_simple.html" %}
       </div>
     </div>
   </div>
