--- a/templates/object_detail_base.html
+++ b/templates/object_detail_base.html
@@ -17,5 +17,7 @@
         {% endblock panel_content %}
       </div>
     </div>
+    {% block modals %}
+    {% endblock modals %}
   </div>
 {% endblock content %}
