--- a/item/templates/item/item_attachment_upload.html
+++ b/item/templates/item/item_attachment_upload.html
@@ -1,12 +1,27 @@
-<!-- company/upload_attachment.html -->
-
-{% extends "base.html" %}
-
-{% block content %}
-<h2>Upload Attachment for {{ item.name }}</h2>
-<form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Upload</button>
-</form>
-{% endblock %}
+<div class="modal-header">
+    <h4><i class="bi bi-upload"></i> Upload an attachment</h4>
+</div>
+<div class="modal-body">
+    <form method="post"
+          enctype="multipart/form-data"
+          action="{% url 'item_attachment_upload' object.pk %}">
+        {% csrf_token %}
+        <label for="id_file">File:</label>
+        <input class="form-control" type="file" name="file" required="" id="id_file">
+        <label for="id_name">Name:</label>
+        <input class="form-control"
+               type="text"
+               name="name"
+               maxlength="125"
+               id="id_name">
+        <label for="id_description">Description:</label>
+        <input class="form-control"
+               type="text"
+               name="description"
+               maxlength="255"
+               id="id_description">
+        <div class="text-end pt-2">
+            <button class="btn btn-success" type="submit">Upload</button>
+        </div>
+    </form>
+</div>
