item attachment upload and delete

--- a/item/templates/item/item_detail.html
+++ b/item/templates/item/item_detail.html
@@ -63,12 +63,8 @@
       <div class="panel">
         <div class="panel-heading d-flex justify-content-between">
           <span class="h5">Attachments</span>
-          <a href="javascript:void(0)"
-             hx-get="{% url 'item_attachment_upload' item.pk %}"
-             hx-trigger="click"
-             hx-target="#uploadModal"
-             hx-swap="outerHTML"
-             hx-after-swap="setTimeout(function() { new bootstrap.Modal(document.getElementById('uploadModal')).show(); }, 100)"
+          <a data-bs-toggle="offcanvas"
+             href="#offcanvasUpload"
              class="btn btn-sm btn-success"><i class="bi bi-file-earmark-arrow-up"></i> Upload</a>
         </div>
         <div class="panel-content">
@@ -102,7 +98,13 @@
                   </td>
                   <td>
                     <a href="#"><i class="bi bi-pencil-square"></i></a>
-                    <a href="#"><i class="bi bi-trash"></i></a>
+                    <a hx-get="{% url 'item_attachment_delete' file.id %}"
+                       hx-trigger="click"
+                       hx-target="#deleteModal .modal-content"
+                       hx-swap="innerHTML"
+                       data-bs-toggle="modal"
+                       data-bs-target="#deleteModal"
+                       href="javascript:void(0);"><i class="bi bi-trash"></i></a>
                   </td>
                 </tr>
               {% endfor %}
@@ -164,6 +166,20 @@
   </div>
 {% endblock panel_content %}
 {# upload attachment modal #}
+{% block offcanvas %}
+  {% include "item/item_detail_attachment_upload.html" %}
+{% endblock offcanvas %}
 {% block modals %}
-  <div id="uploadModal" class="modal fade"></div>
+  <!-- Delete Modal -->
+  <div class="modal fade"
+       id="deleteModal"
+       tabindex="-1"
+       aria-labelledby="deleteModalLabel"
+       aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <!-- HTMX rendered content -->
+      </div>
+    </div>
+  </div>
 {% endblock modals %}
